--- a/NYC_2021_Crash_Visualizations.ipynb
+++ b/NYC_2021_Crash_Visualizations.ipynb
@@ -18,6 +18,12 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6a478a0f",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "caf1fdd2",
    "metadata": {
     "slideshow": {
@@ -34,8 +40,11 @@
    "id": "4900f4c0",
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
-    }
+     "slide_type": "-"
+    },
+    "tags": [
+     "to_remove"
+    ]
    },
    "outputs": [
     {
@@ -74,7 +83,7 @@
    "id": "5917d474",
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "-"
     }
    },
    "source": [
@@ -99,8 +108,11 @@
    "id": "b75355aa",
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
-    }
+     "slide_type": "-"
+    },
+    "tags": [
+     "to_remove"
+    ]
    },
    "outputs": [
     {
@@ -135,7 +147,7 @@
    "id": "b9883cc8",
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "-"
     }
    },
    "source": [
@@ -160,8 +172,11 @@
    "id": "e57e62bc",
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
-    }
+     "slide_type": "-"
+    },
+    "tags": [
+     "to_remove"
+    ]
    },
    "outputs": [
     {
@@ -208,8 +223,11 @@
    "id": "d37a8dac",
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
-    }
+     "slide_type": "-"
+    },
+    "tags": [
+     "to_remove"
+    ]
    },
    "outputs": [
     {
@@ -260,8 +278,11 @@
    "id": "27c86cf9",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
-    }
+     "slide_type": "-"
+    },
+    "tags": [
+     "to_remove"
+    ]
    },
    "outputs": [],
    "source": [
@@ -317,8 +338,11 @@
    "id": "4aa944a9",
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
-    }
+     "slide_type": "-"
+    },
+    "tags": [
+     "to_remove"
+    ]
    },
    "outputs": [
     {
@@ -356,7 +380,7 @@
    "id": "5813052b",
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "-"
     }
    },
    "source": [
@@ -382,8 +406,11 @@
    "id": "2f4744e6",
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
-    }
+     "slide_type": "-"
+    },
+    "tags": [
+     "to_remove"
+    ]
    },
    "outputs": [
     {
@@ -420,7 +447,7 @@
    "id": "c98644b2",
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "-"
     }
    },
    "source": [
@@ -450,8 +477,11 @@
    "metadata": {
     "scrolled": false,
     "slideshow": {
-     "slide_type": "subslide"
-    }
+     "slide_type": "-"
+    },
+    "tags": [
+     "to_remove"
+    ]
    },
    "outputs": [
     {
@@ -476,6 +506,7 @@
     }
    ],
    "source": [
+    "\n",
     "(\n",
     "    ggplot(nyc_crash_2021, aes(x = 'Hour', y = after_stat('count'), fill = 'BOROUGH'))\n",
     "    + geom_histogram(binwidth = 1, bins = 24)\n",
@@ -524,8 +555,11 @@
    "id": "5c069448",
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
-    }
+     "slide_type": "-"
+    },
+    "tags": [
+     "to_remove"
+    ]
    },
    "outputs": [
     {
@@ -582,8 +616,11 @@
    "id": "3c1ebbd6",
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
-    }
+     "slide_type": "-"
+    },
+    "tags": [
+     "to_remove"
+    ]
    },
    "outputs": [],
    "source": [
@@ -605,8 +642,11 @@
    "id": "6b7a5918",
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
-    }
+     "slide_type": "-"
+    },
+    "tags": [
+     "to_remove"
+    ]
    },
    "outputs": [
     {
