adding intro slide

--- a/NYC_2021_Crash_Visualizations.ipynb
+++ b/NYC_2021_Crash_Visualizations.ipynb
@@ -19,8 +19,16 @@
   {
    "cell_type": "markdown",
    "id": "6a478a0f",
-   "metadata": {},
-   "source": []
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "The NYC Crash data is an open data set published by NYC Open data containing information on motor vehicle crashes in New York City. It can be downloaded from the following link: https://data.cityofnewyork.us/Public-Safety/Motor-Vehicle-Collisions-Crashes/h9gi-nx95\n",
+    "\n",
+    "For the presentation, we will be looking at crashes that occured in the calendar year of 2021."
+   ]
   },
   {
    "cell_type": "markdown",
