update intro slide

--- a/NYC_2021_Crash_Visualizations.ipynb
+++ b/NYC_2021_Crash_Visualizations.ipynb
@@ -13,7 +13,8 @@
     "\n",
     "Presentation By:\n",
     "- Taelor McClurg\n",
-    "- Sinchan Sharma"
+    "- Sinchan Sharma\n",
+    "- Sakeena Aimandi"
    ]
   },
   {
